fixed spacing between project details and video section

--- a/src/index.css
+++ b/src/index.css
@@ -278,6 +278,7 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   height: 400px;
   width: 210px;
   background-color: #7796af;
+  box-sizing: border-box;
 }
 
 .card-container {
@@ -292,6 +293,12 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
 .project-border {
   border: 2px rgb(4, 69, 70) solid;
   width: 100%;
+  min-width: 800px;
+  max-width: 1200px;
+}
+
+.m-project-desc{
+  width: 800px;
 }
 
 .title {
